# geospatial-etl-validation-toolkit

./: .gitignore  AGENTS.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: validate.yml
docs/: architecture.md  postgis-load-plan.md  reviewer-guide.md
reports/examples/: bad-assets.html  bad-assets.json  bad-assets.md  bad-service-locations.html  bad-service-locations.json  bad-service-locations.md  batch-summary.html  batch-summary.json  batch-summary.md  field-assets.html  field-assets.json  field-assets.md  service-locations.html  service-locations.json  service-locations.md
samples/: validation-rules.json
samples/invalid/: bad_assets.geojson  bad_service_locations.csv
samples/valid/: field_assets.geojson  service_locations.csv
src/spatial_validator/: __init__.py  __main__.py  cli.py  config.py  models.py  postgis.py  reports.py  validators.py
tests/: test_batch_summary.py  test_config_rules.py  test_csv_validator.py  test_geojson_validator.py  test_postgis_loader.py  test_raster_validator.py  test_reports.py  test_vector_validator.py
