[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "geospatial-etl-validation-toolkit"
version = "0.1.0"
description = "A geospatial data readiness validator for GeoJSON, CSV, and PostGIS-oriented ETL workflows."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Joseph C. Dillard" }
]
keywords = [
  "gis",
  "geospatial",
  "etl",
  "postgis",
  "geojson",
  "data-quality"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: GIS",
  "Topic :: Database"
]

[project.scripts]
spatial-validator = "spatial_validator.cli:main"

[project.optional-dependencies]
geo = [
  "geopandas>=0.14",
  "pyogrio>=0.7",
  "rasterio>=1.3",
  "shapely>=2.0"
]
dev = [
  "pytest>=8"
]

[tool.setuptools.packages.find]
where = ["src"]
